syntax = "proto3";
package secret.compute.v1beta1;

import "gogoproto/gogo.proto";
import "secret/compute/v1beta1/types.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "cosmos/base/abci/v1beta1/abci.proto";

option go_package = "github.com/enigmampc/SecretNetwork/x/compute/internal/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;


// Query provides defines the gRPC querier service
service Query {
    // Query contract
    rpc ContractInfo (QueryByAddressRequest) returns (QueryContractInfoResponse) {
        option (google.api.http).get = "/compute/v1beta1/contract/{address}";
    }
    // Query contract
    rpc ContractsByCode (QueryByIDRequest) returns (QueryContractsByCodeResponse) {
        option (google.api.http).get = "/compute/v1beta1/code/{code_id}/contracts";
    }
    // Query contract
    rpc SmartContractState (QuerySmartContractStateRequest) returns (QuerySmartContractStateResponse) {
        option (google.api.http).get = "/compute/v1beta1/contract/{address}/smart";
    }
    // Query a specific contract code
    rpc Code (QueryByIDRequest) returns (QueryCodeResponse) {
        option (google.api.http).get = "/compute/v1beta1/code/{code_id}";
    }
    // Query all contract codes on-chain
    rpc Codes (google.protobuf.Empty) returns (QueryCodesResponse) {
        option (google.api.http).get = "/compute/v1beta1/code";
    }
    // Query contract hash by address
    rpc ContractHash (QueryByAddressRequest) returns (QueryContractHashResponse) {
        option (google.api.http).get = "/compute/v1beta1/hash/address/{address}";
    }
    // Query contract hash by code id
    rpc ContractHashByID (QueryByIDRequest) returns (QueryContractHashResponse) {
        option (google.api.http).get = "/compute/v1beta1/hash/id/{code_id}";
    }
    // Query contract key by address
    rpc ContractKey(QueryByAddressRequest) returns (QueryContractKeyResponse) {
        option (google.api.http).get = "/compute/v1beta1/key/{address}";
    }
    // Query contract label by address
    rpc LabelByAddress(QueryByAddressRequest) returns (QueryContractLabelResponse) {
        option (google.api.http).get = "/compute/v1beta1/label/address/{address}";
    }
    // Query contract address by label
    rpc AddressByLabel(QueryByLabelRequest) returns (QueryContractAddressResponse) {
        option (google.api.http).get = "/compute/v1beta1/address/label/{label}";
    }
}

message QuerySmartContractStateRequest {
    // address is the canonical address of the contract
    string address = 1;
    bytes query_data = 2;
}

message QueryByLabelRequest {
    string label = 1;
}

message QueryByAddressRequest {
    // address is the canonical address of the contract
    string address = 1;
}

message QueryByIDRequest {
    uint64 code_id = 1; // grpc-gateway_out does not support Go style CodID
}

message QuerySmartContractStateResponse {
    bytes data = 1;
}

// QueryContractInfoResponse is the response type for the Query/ContractInfo RPC method
message QueryContractInfoResponse {
    // address is the canonical address of the contract
    string address = 1;
    ContractInfo ContractInfo = 2 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}

// ContractInfoWithAddress adds the address (key) to the ContractInfo representation
message ContractInfoWithAddress {
    // address is the canonical address of the contract
    string address = 1;
    ContractInfo ContractInfo = 2 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}

message QueryContractsByCodeResponse {
    repeated ContractInfoWithAddress contract_infos = 1 [(gogoproto.nullable) = false];
}

message CodeInfoResponse {
    uint64 code_id = 1 [(gogoproto.customname) = "CodeID", (gogoproto.jsontag) = "id"]; // id for legacy support
    string creator = 2;
    bytes data_hash = 3 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
    string source = 4;
    string builder = 5;
}

message QueryCodeResponse {
    CodeInfoResponse code_info = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    bytes data = 2 [(gogoproto.jsontag) = "data"];
}

message QueryCodesResponse {
    repeated CodeInfoResponse code_infos = 1 [(gogoproto.nullable) = false];
}

message QueryContractAddressResponse {
    // address is the canonical address of the contract
    string address = 1;
}

message QueryContractLabelResponse {
    string label = 1;
}

message QueryContractKeyResponse {
    bytes key = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
}

message QueryContractHashResponse {
    bytes code_hash = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
}

// DecryptedAnswer is a struct that represents a decrypted tx-query
message DecryptedAnswer {
    option (gogoproto.equal) = false;

    string type = 1;
    string input = 2;
    string output_data = 3;
    string output_data_as_string = 4;
    repeated cosmos.base.abci.v1beta1.StringEvent output_logs = 5 [(gogoproto.nullable) = false];
    bytes output_error = 6 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    string plaintext_error = 7;
}
